--- a/package.json
+++ b/package.json
@@ -40,9 +40,15 @@
     "use-shopping-cart": "^3.1.6"
   },
   "devDependencies": {
-    "@types/mui-datatables": "^4.3.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0",
+    "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.2.1",
+    "typescript": "4.8.4"
   }
 }
