--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "firebase": "^9.19.1",
     "mongoose": "^7.0.3",
     "mui-datatables": "^4.3.0",
-    "next": "13.1.6",
+    "next": "^13.1.6",
     "next-auth": "^4.21.1",
     "react": "18.2.0",
     "react-date-countdown-timer": "^1.1.0",
@@ -45,7 +45,7 @@
     "@types/react-dom": "18.0.8",
     "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "13.1.6",
     "postcss": "^8.4.18",
     "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.1",
